src/main/kotlin/com/example/springwebflux/common/error/InternalServerError.kt
package com.example.springwebflux.common.error

class InternalServerError(
    errorMessage: String,
) : BaseException(errorMessage, 500) {
    companion object {
        const val UNEXPECTED_EXCEPTION = "Unexpected Error Occurred"
    }
}
